[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tunnel-mcp"
version = "0.1.0"
description = "MCP server — Tunnel GMAO read-only connector"
requires-python = ">=3.12"

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
sse = [
    "uvicorn>=0.29.0",
    "starlette>=0.37.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]
